# PalimpsestLib

./: .gitignore  LICENSE  README.md  et --soft 8f29b9a  pyproject.toml  pytest.ini  setup.cfg  test.py  test2.py
Palimpsest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
palimpsest/: .gitignore  __init__.py  analyzer_engine_provider.py  config.py  palimpsest.py  requirements-postal-win.txt  requirements.txt  test.py
palimpsest/docs/: README.md  accepted_findings.md  agent_guidance.md  codebase_review_findings.md  current_codebase_review_findings.md  developer_guide.md  fail_fast_policy.md  full_test_report.md  test_execution_results.md  test_report_2026-05-01.md
palimpsest/fakers/: __init__.py  faker_context.py  faker_utils.py  fakers_funcs.py  names_morph.py
palimpsest/recognizers/: __init__.py  flair_recognizer.py  gliner_recogniser.py  natasha_recogniser.py  regex_recognisers.py  slovnet_recogniser.py
palimpsest/sample/: llm_simplistic.py
palimpsest/tests/: test_fakers.py  test_palimpsest.py
palimpsest/utils/: addr_unifier.py  sentence_splitter.py
sample/: llm_simplistic.py  sample_reqs.txt
tests/: __init__.py  conftest.py  test_complex_text_processing.py  test_fakers.py  test_palimpsest.py
tests/e2e/: test_llm_roundtrip.py
tests/integration/: test_real_palimpsest_pipeline.py
tests/unit/: test_consumer_contract.py  test_fail_fast_contract.py  test_faker_context_contract.py  test_privacy_logging_contract.py  test_public_api_contract.py  test_recognizer_contract.py
wheels/: postal-1.1.11-cp313-cp313-win_amd64.whl
