[options]
packages = find:
python_requires = >=3.12.6
zip_safe = False
install_requires =
    python-dotenv
    presidio_analyzer[transformers]
    presidio_anonymizer
    nltk
    natasha
    pymorphy3
    pymorphy3-dicts-ru
    spacy
    gliner
    flair
    faker
    rapidfuzz
    petrovna
    pytrovich

[options.packages.find]
# only pick up your real package
include =
    palimpsest*
# explicitly skip your sample folder
exclude =
    sample*
    tests*