[options]
packages = find:
python_requires = >=3.13
zip_safe = False
install_requires =
    python-dotenv
    presidio_analyzer[transformers]
    presidio_anonymizer
    nltk
    natasha
    pymorphy3
    pymorphy3-dicts-ru
    spacy
    gliner
    flair
    faker
    rapidfuzz
    petrovna
    pytrovich
    pypostal-multiarch ; sys_platform == 'linux'
    postal @ https://raw.githubusercontent.com/gbvolkov/PalimpsestLib/main/wheels/postal-1.1.11-cp313-cp313-win_amd64.whl ;  sys_platform == 'win32' and platform_machine == "AMD64" and python_version >= "3.13" and python_version < "3.14"

[options.packages.find]
# only pick up your real package
include =
    palimpsest*
# explicitly skip your sample folder
exclude =
    sample*
    tests*
